# signal-2

./: .env.example  README.md  SIGNAL_ARCHITECTURE.md  ai-posts-mvp-architecture-v3.md  ai-posts-plan-v1.md  ai-posts-v2-architecture.md  pyproject.toml
.github/workflows/: daily-pipeline.yml  pipeline-badminton.yml  pipeline-tech-careers.yml
ai_posts/: cli.py  config.py
ai_posts/db/: engine.py  models.py
ai_posts/llm/: client.py  prompts.py
ai_posts/pipeline/: angle.py  cluster.py  collect.py  distill.py  embed.py  hook.py  write.py
ai_posts/sources/: youtube.py
