[project]
name = "ai-posts"
version = "0.1.0"
description = "Signal-first AI content generation pipeline"
requires-python = ">=3.11"
dependencies = [
    # CLI
    "typer>=0.15.0",
    "rich>=13.0",
    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "alembic>=1.14",
    # LLM & Embeddings
    "openai>=1.60",
    # Data & ML
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26",
    "hdbscan>=0.8",
    # HTTP
    "httpx>=0.27",
    # Utils
    "python-dotenv>=1.0",
]

[project.scripts]
ai-posts = "ai_posts.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
